force-app/main/default/objects/Possession_Checklist__c/Possession_Checklist__c.object-meta.xml
<CustomObject>
    <label>Possession Checklist</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Possession Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Possession checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>