force-app/main/default/objects/Possession_Checklist__c/fields/Accounts_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Clearance__c</fullName>
    <label>Accounts Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>