force-app/main/default/objects/Possession_Checklist__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Possession checklists</relationshipLabel>
    <relationshipName>Possession_checklists</relationshipName>
    <type>Lookup</type>
</CustomField>