force-app/main/default/objects/Possession_Checklist__c/fields/FM_Status__c.field-meta.xml
<CustomField>
    <fullName>FM_Status__c</fullName>
    <label>FM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>