force-app/main/default/objects/Possession_Checklist__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Possession checklists</relationshipLabel>
    <relationshipName>Possession_checklists</relationshipName>
    <type>Lookup</type>
</CustomField>